--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "ng2-daterangepicker": "^3.0.1",
+    "ngx-cookie": "^5.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
